# HighQuality-GalgameTranslator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  app.py  build.bat  count_word_frequency.py  dictionary.xlsx  example.txt  output.txt  requirements.txt  test.cpp  translate_text.py
config/: character_name.yaml  config.yaml  text_analyzer.yaml
config/example/: character_name.yaml
function/: excel_parser.py  general_text_processor.py  machine_translator.py  word_counter.py
machine_translator/: general_translator.py  google_translator.py  tencent_translator.py
pkg/: build .bat  build.sh  go.mod  go.sum  t.go
pkg/cmd/: main.go
pkg/translate/: tencent_translate.go
plugins/: bishop.py  bishop_count.py  bishop_trans.py  bishop_translator.py  test_translator.py
python_src/function/: excel_parser.py  general_text_processor.py  special_text_processor.py  word_counter.py
python_src/machine_translator/: general_translator.py  tencent_translator.py
python_src/plugins/: bishop_counter.py
python_src/ui/: ui_machine_translator.py  ui_machine_translator.ui  ui_menu.py  ui_menu.ui  ui_setting.ui  ui_word_counter.py
python_src/ui_function/: machine_translator.py  menu.py  word_counter.py
scripts/: build.bat  build.sh
src/: gal.cpp  gal_translator.cpp  gal_translator.h
src/processor/: name_process.h  text_analyzer.cpp  text_analyzer.h  text_processor.cpp  text_processor.h
src/translate/: machine_translator.cpp  machine_translator.h  tencent_trans.cpp  tencent_trans.h  trans_interface.h
src/utils/: analyzer_res.h  file.hpp  string.hpp  utf8.hpp
ui/: machine_trans.py  main_window.py  menu.py  setting.py  ui_machine_trans.py  ui_machine_trans.ui  ui_menu.py  ui_menu.ui  ui_setting.py  ui_setting.ui  ui_word_count.py  ui_word_count.ui
ui_function/: machine_trans.py  machine_translator.py  main_window.py  menu.py  setting.py  word_count.py
